--- a/render.yaml
+++ b/render.yaml
@@ -2,15 +2,15 @@ services:
   - type: worker
     name: securebotplus
     runtime: python
-    plan: free
-    region: singapore   # 近場でレイテンシ低め（好みで変更可）
+    plan: starter   # ← free ではなく starter などに変更
+    region: singapore
     buildCommand: "pip install -r requirements.txt"
     startCommand: "python secure_bot_plus.py"
     envVars:
       - key: TOKEN
-        sync: false         # Renderダッシュボードで後から入れます
+        sync: false
       - key: DATA_DIR
-        value: /data        # ← さっきコードで参照した保存先
+        value: /data
     disk:
       name: bot-data
       mountPath: /data
